fix to reduce the overlapping labels and scale the axes based on the largest amount

--- a/src/app/vv-charts/outside-money-bar/outside-money-bar.component.scss
+++ b/src/app/vv-charts/outside-money-bar/outside-money-bar.component.scss
@@ -25,7 +25,6 @@
     height:10vh; 
     width:58vw;
     border-left:1px solid #727272;
-    margin-left:40px;
 }
 
 .outside-grid{
